# engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Documentation/: Shaders.md
Documentation/html/: _base_8h.html  _base_8h.js  _base_8h_source.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_core_2_base_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_core_2_engine_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_core_2_event_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_core_2_log_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_core_2_time_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_camera_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_graphics_context_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_index_buffer_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_material_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_model_loader_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_render_command_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_renderer_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_resource_manager_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_scene_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_shader_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_texture_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_window_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_input_2_input_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_math_2_math_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_math_2_math_utils_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_math_2_matrix3_8h-example.html  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_math_2_vector2_8h-example.html  _camera_8cpp_source.html  _camera_8h_source.html  _engine_8cpp_source.html  _engine_8h_source.html  _event_8h_source.html  _g_l_error_8h_source.html  _graphics_8h.html  _graphics_8h_source.html  _graphics_context_8cpp_source.html  _graphics_context_8h_source.html  _index_buffer_8cpp_source.html  _index_buffer_8h_source.html  _input_8cpp_source.html  _input_8h_source.html  _log_8cpp_source.html  (+234 more)
Documentation/latex/: _base_8h.tex  _base_8h_source.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_core_2_base_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_core_2_engine_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_core_2_event_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_core_2_log_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_core_2_time_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_camera_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_graphics_context_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_index_buffer_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_material_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_model_loader_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_render_command_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_renderer_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_resource_manager_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_scene_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_shader_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_texture_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_graphics_2_window_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_input_2_input_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_math_2_math_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_math_2_math_utils_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_math_2_matrix3_8h-example.tex  _c_1_2_users_2_p_c_2source_2repos_2engine_2src_2_math_2_vector2_8h-example.tex  _camera_8cpp_source.tex  _camera_8h_source.tex  _engine_8cpp_source.tex  _engine_8h_source.tex  (+115 more)
src/: main.cpp
(+199 files in other folders)
